--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="wrapper">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-          <img src="./img/logo.png" width="120" />
+          <img src="./img/logo.png" width="120" alt="logo" />
         </a>
         <button
           class="navbar-toggler"
